<?xml version="1.0"?>
<package>
  <name>ras_line_detector</name>
  <version>0.0.0</version>
  <description>The ras_line_detector package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
