<?xml version="1.0"?>
<package>
  <name>ras_particle_filter</name>
  <version>0.0.0</version>
  <description>The ras_particle_filter package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ras_line_detector</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ras_line_detector</run_depend>

  <export>
  </export>
</package>
